<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity"
	android:focusable="true"  
    android:focusableInTouchMode="true"
	>
	<!-- 
	<Button 
		android:layout_width="match_parent"
		android:layout_height="70sp"
		android:layout_marginTop="5sp"		
		android:id="@+id/bt_openPrinter"
		android:onClick="openPrinter"
		android:text="@string/open_printer"
		android:background="#ff0000"
		android:textSize="20sp"
		/> 
	 -->
	<Button 
		android:layout_width="match_parent"
		android:layout_height="70sp"
		android:background="#00ff00"
		android:layout_margin="5sp"		
		android:id="@+id/bt_getversion" 
		android:onClick="getversion"
		android:text="@string/get_version"
		android:textSize="20sp"  
		/>  	
	
	
	<EditText 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="5sp"		
		android:lines="1"
		android:hint="Input print content "
		android:text="this is a printer test program" 
		android:id="@+id/et_content"  
		android:layout_below="@id/bt_getversion"    	
		/> 
	
	
	<Button  
		android:layout_width="120sp"
		android:layout_height="wrap_content"
		android:layout_below="@id/et_content"	
		android:background="#00ffff"	
		android:layout_margin="5sp"
		android:id="@+id/bt_zoonIn"
		android:onClick="zoonIn"
		android:text="@string/zoonIn"
		android:textSize="20sp"   
		/>	 	
		 
	<Button  
		android:layout_width="120sp" 
		android:layout_height="wrap_content"
		android:layout_below="@id/et_content" 
		android:background="#ffff00"
		android:layout_margin="5sp"
		android:layout_toRightOf="@id/bt_zoonIn"	
		android:id="@+id/bt_set_align"
		android:onClick="set_align"
		android:text="@string/set_align"
		android:textSize="20sp"  
		/>	
		
	<Button  
		android:layout_width="120sp" 
		android:layout_height="wrap_content"
		android:layout_below="@id/et_content" 
		android:background="#88ff88"
		android:layout_margin="5sp"
		android:layout_toRightOf="@id/bt_set_align"	
		android:id="@+id/bt_set_l_margin"
		android:onClick="set_l_margin"
		android:text="@string/left_margin"
		android:textSize="20sp"  
		/>		
		
	<Button  
		android:layout_width="120sp" 
		android:layout_height="wrap_content"
		android:layout_below="@id/et_content"
		android:background="#880088" 
		android:layout_margin="5sp"
		android:layout_toRightOf="@id/bt_set_l_margin"	
		android:id="@+id/bt_set_r_margin"
		android:onClick="set_r_margin"
		android:text="@string/right_margin"
		android:textSize="20sp"  
		/>		

	<Button  
		android:layout_width="120sp" 
		android:layout_height="wrap_content"
		android:background="#88ff00" 
		android:layout_margin="5sp"
		android:layout_below="@id/bt_set_r_margin" 	
		android:id="@+id/bt_set_line_sp"
		android:onClick="set_line_sp"
		android:text="@string/line_space"
		android:textSize="20sp"  
		/>			
	
	
	<Button  
		android:layout_width="120sp" 
		android:layout_height="wrap_content"
		android:background="#88ffff" 
		android:layout_margin="5sp"
		android:layout_below="@id/bt_set_r_margin"
		android:layout_toRightOf="@id/bt_set_line_sp" 	
		android:id="@+id/bt_set_word_sp" 
		android:onClick="set_word_sp"
		android:text="@string/word_space"
		android:textSize="20sp"   
		/>
	
	<Button  
		android:layout_width="120sp" 
		android:layout_height="wrap_content"
		android:background="#88aa00"
		android:layout_margin="5sp" 
		android:layout_below="@id/bt_set_r_margin"
		android:layout_toRightOf="@id/bt_set_word_sp" 	
		android:id="@+id/bt_set_print_orient" 
		android:onClick="set_print_orient"
		android:text="@string/print_orient"
		android:textSize="20sp"   
		/>	
		
	<Button  
		android:layout_width="120sp" 
		android:layout_height="wrap_content"
		android:background="#ffaa00"
		android:layout_margin="5sp" 
		android:layout_below="@id/bt_set_r_margin"
		android:layout_toRightOf="@id/bt_set_print_orient" 	
		android:id="@+id/bt_set_bold" 
		android:onClick="set_bold"
		android:text="@string/set_bold"
		android:textSize="20sp"   
		/>		
	
	<Button  
		android:layout_width="120sp" 
		android:layout_height="wrap_content"
		android:layout_below="@id/bt_set_bold"	
		android:background="#aaaaff"
		android:layout_margin="5sp" 
		android:id="@+id/bt_set_under_line"  
		android:onClick="set_under_line"
		android:text="@string/under_line"
		android:textSize="20sp"   
		/>
	<!-- 	
	<Button  
		android:layout_width="120sp" 
		android:layout_height="wrap_content"
		android:background="#ffaa88" 
		android:layout_margin="5sp"
		android:layout_below="@id/bt_set_bold"
		android:layout_toRightOf="@id/bt_set_under_line" 	
		android:id="@+id/bt_set_inverse" 
		android:onClick="set_inverse"
		android:text="@string/set_inverse"
		android:textSize="20sp"    
		/>
	 -->	
	<!--  	 
	<Button   
		android:layout_width="150sp"  
		android:layout_height="wrap_content" 
		android:background="#66aa88" 
		android:layout_margin="5sp"
		android:layout_below="@id/bt_set_bold" 
		android:layout_toRightOf="@id/bt_set_inverse"
		android:id="@+id/bt_set_feed_paper" 
		android:onClick="set_feed_paper"
		android:text="feed_paper"
		android:textSize="20sp"   
		/>		
	-->	
 	<!--  
	<Button   
		android:layout_width="120sp"  
		android:layout_height="wrap_content" 
		android:background="#66aa88" 
		android:layout_margin="5sp"
		android:layout_below="@id/bt_set_bold" 
		android:layout_toRightOf="@id/bt_set_inverse"
		android:id="@+id/bt_set_underline" 
		android:onClick="underline"
		android:text="@string/under_line"
		android:textSize="20sp"   
		/>		
 -->
	<Button   
		android:layout_width="120sp"  
		android:layout_height="wrap_content" 
		android:background="#99aacc" 
		android:layout_margin="5sp"
		android:layout_below="@id/bt_set_bold" 
		android:id="@+id/bt_set_lf" 
		android:onClick="set_lf"
		android:text="@string/Enter"
		android:textSize="20sp"   
		/>
	<Button  
		android:layout_width="match_parent"
		android:layout_height="70sp"
		android:background="#88aa00" 
		android:layout_margin="5sp"
		android:layout_below="@id/bt_set_lf"		
		android:id="@+id/bt_printcode"
		android:onClick="printcode"
		android:text="@string/print_onebarcode"
		android:textSize="20sp"  
		/>
	
	<Button  
		android:layout_width="match_parent"
		android:layout_height="70sp"
		android:background="#aaaaff" 
		android:layout_margin="5sp"
		android:layout_below="@id/bt_printcode"		
		android:id="@+id/bt_printimage"
		android:onClick="printimage"
		android:text="@string/print_logopicture"
		android:textSize="20sp"  
		/>
	
	
	<Button  
		android:layout_width="match_parent"
		android:layout_height="70sp"
		android:background="#3333cc" 
		android:layout_margin="5sp"
		android:layout_below="@id/bt_printimage"		
		android:id="@+id/bt_printtest"
		android:onClick="printtes" 
		android:text="@string/print_context" 
		android:textSize="20sp"  
		/>
	
	<!-- 
	<Button
	    android:id="@+id/bt_ClosePrinter"
	    android:layout_width="match_parent"
	    android:layout_height="70sp"
	    android:layout_alignParentRight="true"
	    android:layout_below="@+id/bt_printtest"
	    android:layout_margin="5sp"
	    android:layout_marginTop="62dp"
	    android:background="#ff0000"
	    android:onClick="ClosePrinter"
	    android:text="@string/close_printer"
	    android:textSize="20sp" />
  	 -->

	<Button
	    android:id="@+id/bt_printStatus"
	    android:layout_width="120sp"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/bt_set_word_sp"
	    android:layout_margin="5sp"
	    android:layout_toRightOf="@+id/bt_set_under_line"
	    android:background="#aa00ff"
	    android:onClick="printStatus"
	    android:text="@string/printStatus"
	    android:textSize="20sp" />
  
</RelativeLayout> 